tests/negative/typechecker_bad2.sp
(* Wrong type atribution *)

Var: Double = "Hello";

main: Int () {
    return 0;
}